[gd_scene load_steps=2 format=2]

[ext_resource path="res://YarnExample.gd" type="Script" id=1]

[node name="Page" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
script = ExtResource( 1 )

[node name="PageVBox" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 884.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopTitle" type="Label" parent="PageVBox"]
margin_right = 868.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
text = "GODOT YARN IMPORTER"
align = 1
valign = 1

[node name="PageHBox" type="HBoxContainer" parent="PageVBox"]
margin_top = 64.0
margin_right = 868.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogVBox" type="VBoxContainer" parent="PageVBox/PageHBox"]
margin_right = 432.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogTitle" type="Label" parent="PageVBox/PageHBox/DialogVBox"]
margin_right = 432.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "DIALOG"
align = 1
valign = 1

[node name="DialogScroll" type="ScrollContainer" parent="PageVBox/PageHBox/DialogVBox"]
margin_top = 44.0
margin_right = 432.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Dialog" type="MarginContainer" parent="PageVBox/PageHBox/DialogVBox/DialogScroll"]
margin_right = 432.0
margin_bottom = 318.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="PageVBox/PageHBox/DialogVBox/DialogScroll/Dialog"]
margin_right = 432.0
margin_bottom = 318.0

[node name="Margin" type="MarginContainer" parent="PageVBox/PageHBox/DialogVBox/DialogScroll/Dialog"]
margin_right = 432.0
margin_bottom = 318.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="PageVBox/PageHBox/DialogVBox/DialogScroll/Dialog/Margin"]
margin_left = 16.0
margin_top = 16.0
margin_right = 416.0
margin_bottom = 302.0

[node name="ChoicesVBox" type="VBoxContainer" parent="PageVBox/PageHBox"]
margin_left = 436.0
margin_right = 868.0
margin_bottom = 362.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoiceTitle" type="Label" parent="PageVBox/PageHBox/ChoicesVBox"]
margin_right = 432.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "CHOICES"
align = 1
valign = 1

[node name="Choices" type="MarginContainer" parent="PageVBox/PageHBox/ChoicesVBox"]
margin_top = 44.0
margin_right = 432.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="PageVBox/PageHBox/ChoicesVBox/Choices"]
margin_right = 432.0
margin_bottom = 318.0

[node name="Margin" type="MarginContainer" parent="PageVBox/PageHBox/ChoicesVBox/Choices"]
margin_right = 432.0
margin_bottom = 318.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="PageVBox/PageHBox/ChoicesVBox/Choices/Margin"]
margin_left = 16.0
margin_top = 16.0
margin_right = 416.0
margin_bottom = 302.0

[node name="Bottom" type="MarginContainer" parent="PageVBox"]
margin_top = 430.0
margin_right = 868.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 40 )
custom_constants/margin_right = 16
custom_constants/margin_top = 12
custom_constants/margin_left = 16
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PageVBox/Bottom"]
margin_left = 16.0
margin_top = 12.0
margin_right = 852.0
margin_bottom = 120.0
custom_constants/separation = 12

[node name="NotesLabel" type="Label" parent="PageVBox/Bottom/VBoxContainer"]
margin_right = 836.0
margin_bottom = 82.0
text = "Welcome to Godot Yarn Importer!  The focus of this is to provide a GDScript library that reads \"*.yarn.txt\" files from Yarn (https://github.com/InfiniteAmmoInc/Yarn), then imports it into a data structure useful for Godot.  Convienience functions are included but the GUI portion of the import is up to *you*, the developer.  Whether you want basic 2D, custom 2D, 3D controls, or whatever, you are responsible for the look and feel and you must choose the components used to create the GUI. A basic vanilla dialog+choice GUI is provided merely as an example."
autowrap = true

[node name="VisitLabel" type="Label" parent="PageVBox/Bottom/VBoxContainer"]
margin_top = 94.0
margin_right = 836.0
margin_bottom = 108.0

[node name="Settings" type="Label" parent="PageVBox"]
margin_top = 554.0
margin_right = 868.0
margin_bottom = 568.0
